# nesceptor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
altium/nesceptor/: nesceptor.PcbDoc  nesceptor.PrjPcb  nesceptor.PrjPcbStructure  nesceptor.SchDoc  schlib.SchLib
dev/: README.md
dev/inconsole/: inconsole.kicad_pcb  inconsole.kicad_pro  inconsole.kicad_sch  inconsole_bom.csv  inconsole_centroids.csv
dev/inconsole/gbr/: inconsole-B_Cu.gbl  inconsole-B_Mask.gbs  inconsole-B_Paste.gbp  inconsole-B_Silkscreen.gbo  inconsole-Edge_Cuts.gm1  inconsole-F_Cu.gtl  inconsole-F_Mask.gts  inconsole-F_Paste.gtp  inconsole-F_Silkscreen.gto  inconsole-In1_Cu.g1  inconsole-In2_Cu.g2  inconsole-NPTH-drl_map.gbr  inconsole-NPTH.drl  inconsole-PTH-drl_map.gbr  inconsole-PTH.drl
dev/testbench/: testbench.kicad_pcb  testbench.kicad_pro  testbench.kicad_sch  testbench_bom.csv  testbench_centroids.csv
dev/testbench/gbr/: testbench-B_Cu.gbl  testbench-B_Mask.gbs  testbench-B_Paste.gbp  testbench-B_Silkscreen.gbo  testbench-Edge_Cuts.gm1  testbench-F_Cu.gtl  testbench-F_Mask.gts  testbench-F_Paste.gtp  testbench-F_Silkscreen.gto  testbench-NPTH-drl_map.gbr  testbench-NPTH.drl  testbench-PTH-drl_map.gbr  testbench-PTH.drl
dev/usbport/: usbport.kicad_pcb  usbport.kicad_pro  usbport.kicad_sch  usbport_bom.csv  usbport_centroids.csv
dev/usbport/gbr/: usbport-B_Cu.gbl  usbport-B_Mask.gbs  usbport-B_Paste.gbp  usbport-B_Silkscreen.gbo  usbport-Edge_Cuts.gm1  usbport-F_Cu.gtl  usbport-F_Mask.gts  usbport-F_Paste.gtp  usbport-F_Silkscreen.gto  usbport-NPTH-drl_map.gbr  usbport-NPTH.drl  usbport-PTH-drl_map.gbr  usbport-PTH.drl
dev/usbport_enclosure/: bottom.stl  enclosure.scad  top.stl
lib/: nesceptor.kicad_sym
lib/nesceptor.pretty/: AOTA-B201610S3R3-101-T.kicad_mod  CON_5051104091_MOL.kicad_mod  C_0201_0603Metric.kicad_mod  C_0402_1005Metric.kicad_mod  DHVQFN-14-1EP_2.5x3mm_P0.5mm_EP1x1.5mm.kicad_mod  HRO-TYPE-C-31-M-12-Assembly.kicad_mod  PQFP12_RUT_TEX.kicad_mod  PicoEZMate-Reinforced-Lite.kicad_mod  RP2350A_QFN-60_EP_7.75x7.75_Pitch0.4mm.kicad_mod  RP2A07.kicad_mod  TS-1088-AR02016.kicad_mod  USON-10_2.5x1.0mm_P0.5mm.kicad_mod
scripts/: cmake.sh
src/: CMakeLists.txt  hello.c
